fixed privateFor logic